# conductor

./: .gitignore  Cargo.toml  README.md  deny.toml  main.go
.config/: hakari.toml
src/catalog/: Cargo.toml
src/catalog/src/: auth.rs  diff.rs  edit.rs  lib.rs
src/conductor/: Cargo.toml
src/conductor/src/: main.rs
src/ensemble-x/: Cargo.toml
src/ensemble-x/src/: lib.rs  storage.rs
src/ostinator/: Cargo.toml
src/ostinator/src/: http_handler_input.rs  main.rs
src/score/: Cargo.toml
src/score/src/: compiler.rs  lib.rs  parser.rs
src/sql/: Cargo.toml
src/sql/src/: lib.rs  parser.rs
src/workspace-hack/: Cargo.toml
tests/fixtures/app-analytics/: main.sd
tests/fixtures/northwind_0/: main.sd
tests/fixtures/northwind_1/: bar.sd  main.sd
tests/fixtures/northwind_2/: main.sd
tools/: pre-commit
