[package]
name = "catalog"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "25.0.0"
serde = { version = "1.0.163", features = ["derive"] }
sqlparser = { version = "0.33.0", features = ["serde"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["serde"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
