[package]
name = "conductor"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
catalog = { path = "../catalog" }
score = { path = "../score" }
ensemble-x = { path = "../ensemble-x" }
sql = { path = "../sql" }
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
arrow-array = "39"
rustyline = "11.0.0"
arrow-cast = { version = "39", features = ["prettyprint"] }
dirs = "5.0.1"
object_store = { version = "0.5.6", features = ["gcp", "aws"] }
url = "2.4.0"
tracing-subscriber = "0.3.17"
