[package]
name = "ensemble-x"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catalog = { path = "../catalog" }
deltalake = "0.12.0"
sqlparser = "0.34.0"
thiserror = "1.0.40"
