[package]
name = "ensemble-x"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
catalog = { path = "../catalog" }
datafusion = { version = "25.0.0", default-features = false }
deltalake = "0.12.0"
futures = { version = "0.3.28", default-features = false }
object_store = { version = "0.5.6", features = ["aws", "gcp"] }
serde_json = "1.0.96"
sqlparser = "0.33.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false }
tracing = { version = "0.1.37", features = ["attributes"] }
url = "2.4.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
