[package]
name = "ostinator"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
object_store = { version = "0.5.6", features = ["gcp", "aws", "aws_profile"] }
url = "2.4.0"
axum = { version = "0.6.18", features = ["tracing"] }
ensemble-x = { path = "../ensemble-x" }
sql = { path = "../sql" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
axum-macros = "0.3.7"
