[package]
name = "score"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catalog = { path = "../catalog" }
sqlparser = "0.34.0"
thiserror = "1.0.40"
uuid = "1.3.3"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
