[package]
name = "sql"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "26.0.0"
sqlparser = "0.34.0"
thiserror = "1.0.40"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
