[package]
name = "sql"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
datafusion = "25.0.0"
sqlparser = "0.33.0"
thiserror = "1.0.40"
ensemble-x = { path = "../ensemble-x" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
deltalake = { version = "0.12.0", features = ["datafusion"] }
